--- a/07_projects/to-do/style.css
+++ b/07_projects/to-do/style.css
@@ -34,3 +34,21 @@ body{
     font-weight: 600;
     font-size: 30px;
 }
+
+.tasks{
+    margin-top: 20px;
+    padding-left: 0px;
+}
+
+.added-task{
+    width: 380px;
+    border: 1px solid black;
+    padding: 20px;
+    background-color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    color: rgb(78, 78, 77);
+    margin: 5px;
+    list-style-type: none; /* Remove bullets */
+}
