--- a/07_projects/notes/style.css
+++ b/07_projects/notes/style.css
@@ -3,12 +3,23 @@ body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+#add-note-button{
+    padding: 10px 20px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 30px;
+    font-weight: 400;
+    border: 2px solid black;
+    border-radius: 20px;
+    background-color: beige;
+}
+
 .container{
     display: flex;
     align-items: center;
     justify-content: center;
     overflow: auto;
-    gap: 10px;
+    gap: 20px;
+    flex-wrap: wrap;
 }
 
 .note-container{
