added all the functionality

--- a/07_projects/notes/style.css
+++ b/07_projects/notes/style.css
@@ -6,11 +6,24 @@ body{
 #add-note-button{
     padding: 10px 20px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 30px;
+    font-size: 20px;
     font-weight: 400;
     border: 2px solid black;
     border-radius: 20px;
     background-color: beige;
+    cursor: pointer;
+}
+
+#remove-button{
+    padding: 10px 20px;
+    margin-left: 20px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    border: 2px solid black;
+    border-radius: 20px;
+    background-color: beige; 
+    cursor: pointer;
 }
 
 .container{
